add pagination to event list component,minor fixes

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -39,7 +39,7 @@
       defer
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBm7XQkNxvkDvy1KPfh6R_vxuh2BfsADdE"
     ></script>
-    <link rel="stylesheet" href="./../src/App.css" />
+    <!-- <link rel="stylesheet" href="./../src/App.css" /> -->
   </head>
 
   <body>
