--- a/client/public/index.html
+++ b/client/public/index.html
@@ -23,6 +23,19 @@
       href="https://fonts.googleapis.com/css?family=Lato:400,700|Quicksand:400,500,700&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      charset="UTF-8"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css"
+    />
+    <!-- <link rel="stylesheet" href="./../src/App.css" /> -->
+
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -39,7 +52,6 @@
       defer
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBm7XQkNxvkDvy1KPfh6R_vxuh2BfsADdE"
     ></script>
-    <!-- <link rel="stylesheet" href="./../src/App.css" /> -->
   </head>
 
   <body>
