Fix some bugs. Lifting up lat, lng  state from AutocompletePlaces.js to AddEvent.js. Implement Google map to the AddEventForm.js

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -53,7 +53,7 @@
     <script
       async
       defer
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBm7XQkNxvkDvy1KPfh6R_vxuh2BfsADdE&libraries=places"
+      src="https://maps.googleapis.com/maps/api/js?key=YOR_GOOGLE_API_KEY&libraries=places"
     ></script>
   </head>
 
