--- a/client/public/index.html
+++ b/client/public/index.html
@@ -53,7 +53,7 @@
     <script
       async
       defer
-      src="https://maps.googleapis.com/maps/api/js?key=YOR_GOOGLE_API_KEY&libraries=places"
+      src="https://maps.googleapis.com/maps/api/js?key=YOUR_GOOGLE_API_KEY&libraries=places"
     ></script>
   </head>
 
